--- a/test_case/new_rx.yaml
+++ b/test_case/new_rx.yaml
@@ -1,11 +1,11 @@
 appId: sqh.jotno.doctor
 ---
-
 - runFlow: login.yaml # <-- Run commands from "login.yaml"
+
 #Create New Rx
 - tapOn: "patient"
 - scrollUntilVisible:
-    element: ${"New 01677576929 P-3EYBYCAJW"}
+    element: "New 01677576929 P-3EYBYCAJW"
     direction: DOWN
 - tapOn: "New
 01677576929
@@ -14,6 +14,6 @@ P-3EYBYCAJW"
 - tapOn: "update/saveRx"
 - tapOn: "SMS"
 - tapOn: "send"
-#- tapOn: "Email"
-#- inputText: "tausif@squarehealth.com.bd"   <--cant use due to window issue
+#- tapOn: "Email" # <-- Window issue
+#- inputText: "tausif@squarehealth.com.bd"
 #- tapOn: "send"
